[package]
name = "gwahaedir"
version = "0.1.0"
edition = "2021"
authors = ["Rob Wygand"]
description = "Gwahaedir is a web app for auditing guilds in World of Warcraft"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
reqwest = { version = "~0.11", features = ["json"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
deadpool = { version = "~0.9", default = false, features = ["managed", "serde"] }
deadpool-redis = { version = "~0.11", features = ["serde"] }
redis = { version = "~0.23" }
rocket_db_pools = { version = "0.1.0-rc.3", features = ["deadpool_redis"]}
chrono = { version = "~0.4", features = ["serde"] }
thiserror = "~1.0"
time = "~0.2.27"